# RoadBeyondthePines

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_app.ps1
backend/: __init__.py
backend/agent_system/: agent.py  agent_capability.py  agent_context.py  agent_factory.py  agent_lifecycle.py  agent_loader.py  agent_manager.py  agent_metadata.py  agent_registry.py  agent_result.py  agent_status.py  agent_task.py  default_agents.py
backend/agents/: __init__.py  ai_agent.py  animation_agent.py  asset_manager.py  audio_agent.py  base_agent.py  build_manager.py  documentation_manager.py  gameplay_agent.py  git_manager.py  memory_manager.py  networking_agent.py  optimization_agent.py  orchestrator.py  plugin_manager.py  task_executor.py  task_planner.py  task_queue.py  testing_manager.py  ui_agent.py  unreal_manager.py  vehicle_agent.py  world_agent.py
backend/api/: __init__.py
backend/app/: __init__.py  (+1 more)
docs/: AI_PROVIDERS.md  EXECUTION_PIPELINE.md  LEGACY_AGENT_MIGRATION.md  UNREAL_MCP.md  agents.md  architecture-diagram.mmd  architecture.md  brain.md  memory.md  runtime.md  setup.md
frontend/: index.html  package-lock.json  package.json
shared/: __init__.py  models.py  schemas.py
tests/: test_agent_dispatch.py  test_agent_system.py  test_app_lifespan.py  test_brain.py  test_memory.py  test_orchestrator_execution.py  test_provider_api.py  test_provider_di.py  test_providers.py  test_runtime_execution.py  test_unreal_mcp.py  test_unreal_mcp_api.py  test_unreal_mcp_di.py  test_unreal_mcp_security.py  test_vertical_execution.py
(+101 files in other folders)
