[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "road-beyond-the-pines-studio"
version = "0.1.0"
description = "AI-powered development environment architecture for Unreal Engine 5.8"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "websockets>=12.0.0",
  "python-dotenv>=1.0.0",
  "alembic>=1.6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx2>=2.7.0",
]

[tool.ruff]
line-length = 100
